--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="info">
-    <p>Double click para editar un TODO</p>
+    <p>Doble click para editar un TODO</p>
     <!-- Remove the below line ↓ -->
     <p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
     <!-- Change this out with your name and url ↓ -->
